fix bug which caused last section of input screen to be cut off

--- a/src/styles/input-screen.css
+++ b/src/styles/input-screen.css
@@ -19,7 +19,6 @@
 .input-screen-wrapper{
     display:flex;
     flex-direction: column;
-    height:100%;
     gap:3rem;
     max-width:600px;
     flex-grow: 1;
